--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Valentin Tello</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href=""
 </head>
 <body>
     <header>
