--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Valentin Tello</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="goku-perfil.jpg"
+    <link rel="icon" href="images/goku-perfil.jpg"
 </head>
 <body>
     <header>
